<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/activity_modsale"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="modsalesStop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:gravity="center_vertical|center|start"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:gravity="center_vertical|center|start"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText9"
        android:gravity="center_vertical|center"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="number"
        android:layout_below="@+id/textView24"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText10"
        android:gravity="center_vertical|center"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="number"
        android:layout_below="@+id/textView25"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/deleteSales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:onClick="delData"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/button8"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/salesBulkMod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        android:onClick="modData"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/button9"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/salesBulkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/salesBulkCooked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/editText9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/salesBulkCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/button12"
        android:layout_alignStart="@+id/textView25" />

    <TextView
        android:text="@string/sellDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button12"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="reloadSpinners"
        android:layout_below="@+id/spinner"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentEnd="true"
        android:id="@+id/button13"
        android:onClick="reloadDates" />

</RelativeLayout>