<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamprobulk.probulk.probulk.AddActivity"
    >


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:text="@string/addBulkCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/editName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editCost"
        android:gravity="center_vertical|center"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:text="@string/addBulkPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/editCost"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:text="@string/addBulkPriceOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/editPrice"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:text="@string/addBulkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editPrice"
        android:gravity="center_vertical|center"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editPriceOld"
        android:gravity="center_vertical|center"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:text="@string/addBulkLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd"
        android:layout_above="@+id/buttonUpdate"
        android:layout_alignParentStart="true"
        android:onClick="onClickAdd"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBackMod"
        android:onClick="addStop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:text="@string/modBulk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUpdate"
        android:layout_above="@+id/buttonBackMod"
        android:layout_alignParentStart="true"
        android:onClick="modBulk"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAdd"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="47dp"
        android:onClick="getPicture"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/photo" />

    <ImageView
        android:id="@+id/imageBulka"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_above="@+id/buttonAdd"
        android:layout_alignParentStart="true" />

</RelativeLayout>
