<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/buttonBackTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="TableStop"
        android:text="@string/back"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnertables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tables"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinnertables"
        android:onClick="loadData"
        android:text="@string/reload"
        android:textColor="@color/colorPrimaryDark" />

    <ListView
        android:id="@+id/datalist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button18"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonBackTable" />


</RelativeLayout>